--- a/demos/pcp/index.html
+++ b/demos/pcp/index.html
@@ -81,7 +81,12 @@
     <script type="text/javascript" src="../../src/shared/schemas/js/pcpSchema.js"></script>
     <script type="text/javascript" src="../../src/pmt/js/PMT.js"></script>
 
+    <!-- Socket.io-client library -->
+    <script type="text/javascript" src="../../src/shared/lib/socket.io/socket.io.js"></script>
+
     <!-- PCPteam-specific files -->
+    <script type="text/javascript" src="../../src/shared/common/GpiiSession.js"></script>
+    <script type="text/javascript" src="../../src/shared/common/GpiiStore.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/prefsEditor.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/languageCollectivePanel.js"></script>
     <script type="text/javascript" src="../../src/pcp/visualAlternativesCollectivePanel.js"></script>
