--- a/demos/prefsEditor/pcp.html
+++ b/demos/prefsEditor/pcp.html
@@ -83,6 +83,9 @@
     <script type="text/javascript" src="../../src/shared/common/GpiiSession.js"></script>
     <script type="text/javascript" src="../../src/shared/common/GpiiStore.js"></script>
 
+    <!-- Socket.io-client library -->
+    <script type="text/javascript" src="../../src/shared/lib/socket.io/socket.io.js"></script>
+
     <!-- PCPteam-specific files -->
     <script type="text/javascript" src="../../src/shared/adjusters/js/prefsEditor.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/languageCollectivePanel.js"></script>
