--- a/src/shared/adjusters/html/textHighlightingTemplate.html
+++ b/src/shared/adjusters/html/textHighlightingTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-dropdown ui-widget">
+<div class="gpii-dropdown">
     <label class="gpiic-textHighlighting-label gpii-label"></label><br>
     <select class="gpiic-textHighlighting gpii-dropdownSelect"></select>
 </div>
