--- a/src/shared/adjusters/html/universalLanguageTemplate.html
+++ b/src/shared/adjusters/html/universalLanguageTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-dropdown ui-widget">
+<div class="gpii-dropdown">
     <label class="gpiic-universalLanguage-label gpii-label"></label><br>
     <select class="gpiic-universalLanguage gpii-dropdownSelect"></select>
 </div>
