--- a/src/shared/adjusters/html/punctuationVerbosityTemplate.html
+++ b/src/shared/adjusters/html/punctuationVerbosityTemplate.html
@@ -5,7 +5,7 @@
         <div class="gpiic-punctuationVerbosity-container gpii-punctuationVerbosity-container" role="radiogroup" aria-labelledby="" aria-describedby="">
             <div class="gpiic-speakText-punctuationVerbosity-row gpii-speakText-punctuationVerbosity-row">
                 <input type="radio" class="gpii-prefsEditor-focusableRadio gpiic-speakText-punctuationVerbosity" id="radioButton-option"/>
-                <label class="gpiic-speakText-punctuationVerbosity-option-label" for="radioButton-option"></label>
+                <label class="gpiic-speakText-punctuationVerbosity-option-label gpii-speakText-punctuationVerbosity-option-label" for="radioButton-option"></label>
             </div>
         </div>
     </div>
